--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     function bubleSort (arr) {
         for (let i = 0; i < arr.length; i++) {
-            for (let j = 0; j < arr.length; j++) {
-                if (arr[i] < arr[j]) {
+            for (let j = i + 1; j < arr.length; j++) {
+                if (arr[i] > arr[j]) {
                     const tmp = arr[i];
                     arr[i] = arr[j];
                     arr[j] = tmp;
