--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 </body>
 <script>
-    const inputArr = [4, 7, 3, 2, 0,12];
+    const inputArr = [4, 7, 3, 2, 0, 12];
 
-    function bubleSort (arr) {
+    function bubleSort(arr) {
         for (let i = 0; i < arr.length; i++) {
             for (let j = i + 1; j < arr.length; j++) {
                 if (arr[i] > arr[j]) {
@@ -25,4 +25,5 @@
 
     bubleSort(inputArr);
 </script>
+
 </html>
