binary find fix

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     const sortResult = bubleSort(inputArr);
 
     function binaryFind(findValue, array) {
-        let startSection = 0, endSection = array.length - 1, middleElem;
+        let startSection = 0, endSection = array.length - 1, currentNumber;
 
         while (startSection <= endSection) {
             currentNumber = Math.floor((startSection + endSection) / 2);
