--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             return false;
         }
 
-        let i, charValue, last, stack = [];
+        let i, charValue, stack = [];
 
         for (i = 0; i < inputLength; i++) {
 
